--- a/package.json
+++ b/package.json
@@ -3,9 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-session": "^1.16.2",
+    "jquery": "^3.4.1",
+    "massive": "^5.11.2",
+    "node-sass": "^4.12.0",
+    "passport": "^0.4.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-helmet": "^5.2.1",
+    "react-icons": "^3.7.0",
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.1.1",
+    "react-slick": "^0.25.2",
+    "redux": "^4.0.4",
+    "redux-promise-middleware": "^6.1.1",
+    "slick-carousel": "^1.8.1",
+    "typescript": "^3.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -16,6 +34,8 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "main": "server/server.js",
+  "proxy": "http://localhost:3750",
   "browserslist": {
     "production": [
       ">0.2%",
